--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<bm-book-list
-  *ngIf="viewState === 'list'"
-  (showDetailsEvent)="showDetails($event)">
-</bm-book-list>
-
-<bm-book-details
-  *ngIf="viewState === 'details'"
-  (showListEvent)="showList()"
-  [book]="book">
-</bm-book-details>
+<router-outlet></router-outlet>
